# sqlx

./: Cargo.toml
sqlx-cli/src/migrator/: postgres.rs
sqlx-core/: Cargo.toml
sqlx-core/src/: decode.rs  encode.rs  error.rs  executor.rs  lib.rs  query_as.rs  row.rs  value.rs
sqlx-core/src/io/: buf_stream.rs
sqlx-core/src/mysql/: connection.rs
sqlx-core/src/net/: tls.rs
sqlx-core/src/postgres/: arguments.rs  mod.rs  row.rs  statement.rs  value.rs
sqlx-core/src/postgres/connection/: describe.rs  executor.rs  mod.rs
sqlx-core/src/postgres/message/: data_row.rs  parameter_description.rs
sqlx-core/src/postgres/types/: array.rs  bool.rs  float.rs  int.rs  mod.rs  str.rs
sqlx-core/src/sqlite/: arguments.rs  mod.rs  row.rs  type_info.rs  value.rs
sqlx-core/src/sqlite/connection/: establish.rs  executor.rs  handle.rs  mod.rs
sqlx-core/src/sqlite/statement/: handle.rs  maybe_owned.rs  mod.rs  worker.rs
sqlx-core/src/sqlite/types/: bool.rs  bytes.rs  float.rs  int.rs  mod.rs  str.rs
sqlx-core/src/types/: json.rs
sqlx-rt/: Cargo.toml
sqlx-rt-macros/src/: lib.rs
sqlx-rt/src/: lib.rs
sqlx-test/src/: lib.rs
src/: lib.rs
tests/: mysql-macros.rs  mysql-raw.rs  mysql.rs  sqlite-macros.rs
tests/postgres/: derives.rs  postgres.rs  raw.rs  types.rs
tests/sqlite/: sqlite.rs  types.rs
