[workspace]
members = [
    ".",
    "sqlx-core",
    "sqlx-macros",
    "sqlx-rt",
    "sqlx-rt-macros",
    "sqlx-test",
#    "cargo-sqlx",
#    "examples/mysql/todos",
#    "examples/postgres/listen",
#    "examples/postgres/todos",
#    "examples/sqlite/todos",
#    "examples/realworld",
]

[package]
name = "sqlx"
version = "0.4.0-pre"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/launchbadge/sqlx"
documentation = "https://docs.rs/sqlx"
description = "🧰 The Rust SQL Toolkit. An async, pure Rust SQL crate featuring compile-time checked queries without a DSL. Supports PostgreSQL, MySQL, and SQLite."
edition = "2018"
keywords = [ "database", "async", "postgres", "mysql", "sqlite" ]
categories = [ "database", "asynchronous" ]
authors = [
    "Ryan Leckey <leckey.ryan@gmail.com>", # ryan@launchbadge.com
    "Austin Bonander <austin.bonander@gmail.com>", # austin@launchbadge.com
    "Zachery Gyurkovitz <zgyurkovitz@gmail.com>", # zach@launchbadge.com
    "Daniel Akhterov <akhterovd@gmail.com>", # daniel@launchbadge.com
]

[package.metadata.docs.rs]
features = [ "all" ]
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = [ "runtime-async-std" ]
#macros = [ "sqlx-macros" ]

# intended mainly for CI and docs
all = [ "all-database", "all-type" ]
all-database = [ "mysql", "sqlite", "postgres" ]
all-type = [ "bigdecimal", "json", "time", "chrono", "ipnetwork", "uuid" ]

# runtime
#runtime-async-std = [ "sqlx-core/runtime-async-std", "sqlx-macros/runtime-async-std", "sqlx-rt/runtime-async-std" ]
#runtime-actix = [ "sqlx-core/runtime-actix", "sqlx-macros/runtime-actix", "sqlx-rt/runtime-actix" ]
#runtime-tokio = [ "sqlx-core/runtime-tokio", "sqlx-macros/runtime-tokio", "sqlx-rt/runtime-tokio" ]
runtime-async-std = [ "sqlx-core/runtime-async-std" ]
runtime-actix = [ "sqlx-core/runtime-actix" ]
runtime-tokio = [ "sqlx-core/runtime-tokio" ]

# database
#postgres = [ "sqlx-core/postgres", "sqlx-macros/postgres" ]
#mysql = [ "sqlx-core/mysql", "sqlx-macros/mysql" ]
#sqlite = [ "sqlx-core/sqlite", "sqlx-macros/sqlite" ]
postgres = [ "sqlx-core/postgres" ]
mysql = [ "sqlx-core/mysql" ]
sqlite = [ "sqlx-core/sqlite" ]

# types
#bigdecimal = ["sqlx-core/bigdecimal", "sqlx-macros/bigdecimal"]
#chrono = [ "sqlx-core/chrono", "sqlx-macros/chrono" ]
#ipnetwork = [ "sqlx-core/ipnetwork", "sqlx-macros/ipnetwork" ]
#uuid = [ "sqlx-core/uuid", "sqlx-macros/uuid" ]
#json = [ "sqlx-core/json", "sqlx-macros/json" ]
#time = [ "sqlx-core/time", "sqlx-macros/time" ]
bigdecimal = ["sqlx-core/bigdecimal"]
chrono = [ "sqlx-core/chrono"]
ipnetwork = [ "sqlx-core/ipnetwork" ]
uuid = [ "sqlx-core/uuid" ]
json = [ "sqlx-core/json" ]
time = [ "sqlx-core/time" ]

[dependencies]
sqlx-core = { version = "0.4.0-pre", path = "sqlx-core", default-features = false }
#sqlx-macros = { version = "0.4.0-pre", path = "sqlx-macros", default-features = false, optional = true }

[dev-dependencies]
anyhow = "1.0.28"
time_ = { version = "0.2.10", package = "time" }
sqlx-rt = { path = "sqlx-rt", version = "0.1.0-pre" }
futures = "0.3.4"
env_logger = "0.7.1"
dotenv = "0.15.0"
trybuild = "1.0.25"
sqlx-test = { path = "./sqlx-test" }
paste = "0.1.10"
serde = { version = "1.0.106", features = [ "derive" ] }
serde_json = "1.0.51"

[[test]]
name = "mysql-macros"
required-features = [ "mysql", "macros" ]

[[test]]
name = "sqlite"
path = "tests/sqlite/sqlite.rs"
required-features = [ "sqlite" ]

[[test]]
name = "sqlite-macros"
required-features = [ "sqlite", "macros" ]

[[test]]
name = "sqlite-derives"
required-features = [ "sqlite", "macros" ]

[[test]]
name = "sqlite-types"
path = "tests/sqlite/types.rs"
required-features = [ "sqlite" ]

[[test]]
name = "mysql"
required-features = [ "mysql" ]

[[test]]
name = "mysql-raw"
required-features = [ "mysql" ]

[[test]]
name = "mysql-derives"
required-features = [ "mysql", "macros" ]

[[test]]
name = "postgres"
path = "tests/postgres/postgres.rs"
required-features = [ "postgres" ]

[[test]]
name = "postgres-raw"
path = "tests/postgres/raw.rs"
required-features = [ "postgres" ]

[[test]]
name = "postgres-types"
path = "tests/postgres/types.rs"
required-features = [ "postgres" ]

[[test]]
name = "postgres-derives"
path = "tests/postgres/derives.rs"
required-features = [ "postgres", "macros" ]

[[test]]
name = "postgres-macros"
path = "tests/postgres/macros.rs"
required-features = [ "postgres", "macros" ]

[[test]]
name = "mysql-types"
required-features = [ "mysql" ]
